PasswordResetTool

  - Converted mail_password_template from a dtml page to a Page Template, as
    dtml pages cannot be translated anymore.
    [hannosch]

  - If available use the email_charset property instead of default_charset to
    encode mails.
    [hannosch]

  - Added the portal name to the subject in the registered_notify_template.pt,
    so it's easier to distinguish those mails for various websites. This
    closes http://dev.plone.org/plone/ticket/5242.
    [hannosch]

  - Replaced some last occurrences of the term member with user.
    [hannosch]

PasswordResetTool 0.4.2

  - Fixed some minor whitespace issue in registered_notify_template.pt.
    [hannosch]

  - allow password reset token to be passed in, in cases where we might not
    have the permission to request a reset from within the template
    [rafrombrc]

PasswordResetTool 0.4.1

  - protect requestRest method of the tool so it can not be called anonymously
    through the web interface

PasswordResetTool 0.4
  - Removed unused import in install code
  - use virtual host forwarded IP if present
  - i18n markup (translations in PloneTranslations)
  - fixed DTML markup to not fail on missing translations
  - fixed root link in pwreset_expired template
  - deprectation warnings removed
  - tabindex not assumed present to be more CMF-friendly
  - add stats to ZMI page
  - implement expired record clearing on every request
  - work around traversal bug with python: expressions instead of path expressions for attributes

PasswordResetTool-0.3
  - Updated to use CMFFormController
  - Support for using to set initial account passwords
  - Verify token before prompting user for new password
  - Generated URLs don't use query strings
  - Fixes to work with CMFMember