@@ -1,2 +1,1 @@
 from mailhost import MockMailHost
-from testbrowser import Browser
